Linea estimate gas endpoint (#585)
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>
Co-authored-by: Pedro Novais <1478752+jpnovais@users.noreply.github.com>